css/style.css
/* ... */
.name_product_item:nth-child(4) {
    width: 65px;
}
.data_product_information:nth-child(4) {
    width: 65px;
}
.name_product_item:nth-child(5) {
    width: 65px;
}
.data_product_information:nth-child(5) {
    width: 65px;
}
.name_product_item:nth-child(6) {
    width: 260px;
}
.buttons_wrapper_moderator {
    display: flex;
    flex-direction: row;
    column-gap: 24px;
    margin-top: 24px;
}
.button_moderator_recipes {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: row;
    column-gap: 14px;
    background-color: #708571;
    border-radius: 8px;
    padding: 14px 21px;
    font-size: 20px;
    font-weight: 500;
    color: #ffffff;
}
.change_status_order_admin {
    padding: 14px 38px;
    background-color: #708571;
    color: #ffffff;
    font-size: 20px;
    font-weight: 500;
    border-radius: 8px;
}
/* admin end */

/* push notifications */

#notification-container {
    position: fixed;
    top: 20px;
    left: 50%;
    transform: translateX(-50%);

    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 20px;

    z-index: 9999;

    width: 500px;
    /* height: 800px; */
}

.push-notification {
    background-color: #708571;
    color: #2a2a2f;
    border-radius: 4px;
    opacity: 0;
    transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
    transform: translateY(-100%);

    display: flex;
    align-items: center;
    gap: 15px;
    padding: 15px 20px;

    max-width: 430px;
    width: 100%;
}

.push-notification span {
    color: #2a2a2f;
    font-weight: 500;
    font-size: 18px;
    line-height: 22px;

    max-width: 100%;
}

.push-notification.show {
    opacity: 1;
    transform: translateY(0);
}

.push-notification.hide {
    opacity: 0;
    transform: translateY(-100%);
}

/* push notifications end */

/* drawer */

.header_menu {
    display: flex;
    flex-direction: column;
    gap: 10px;

    max-width: 40px;
    width: 100%;
    cursor: pointer;
}

.header_menu_item {
    width: 100%;
    height: 3px;
    border-radius: 8px;
    background-color: #4a5743;
}

#drawer {
    position: fixed;
    top: 0;
    left: 0;

    background-color: #708571;
    height: 100vh;
    z-index: 999;
}

.drawer_wrapper {
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: 40px;
    height: 100%;
}

.drawer_wrapper_top {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 45px;
}

.drawer_close_wrapper {
    align-self: flex-end;
    cursor: pointer;
}

.drawer_title {
    font-weight: 500;
    font-size: 36px;
    line-height: 43px;
    color: #ffffff;
}

.drawer_menu {
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    gap: 14px;

    width: 100%;
}

.drawer_menu_item {
    box-sizing: border-box;
    width: 100%;
    padding: 19px 20px;

    display: flex;
    align-items: center;
    gap: 14px;
    color: #ffffff;
    text-decoration: none;
    border-radius: 8px;

    transition: all 0.3s ease-in-out;
}

.drawer_menu_item:hover {
    background-color: rgba(211, 222, 212, 0.5);
}

.drawer_menu_item span {
    font-weight: 500;
    font-size: 18px;
    line-height: 100%;

    color: #ffffff;
}

.drawer_logout {
    display: flex;
    align-items: center;
    gap: 14px;
    color: #ffffff;
    text-decoration: none;
    margin-bottom: 20px;
}

.drawer_logout span {
    font-weight: 500;
    font-size: 18px;
    line-height: 100%;

    color: #ffffff;
}

.none {
    display: none;
}
/* drawer end */

/* cart */
.cart {
    padding-top: 180px;
    padding-bottom: 90px;
    box-sizing: border-box;
}
.delete_all_products {
    text-decoration: none;
    padding: 17px 30px;
    background-color: #d3ded4;
    border-radius: 8px;
    display: flex;
    justify-content: center;
    align-items: center;
    column-gap: 8px;
}
.delete_all_products p {
    color: #4a5743;
    font-size: 22px;
    font-weight: 500;
}
.cart_products_list {
    width: 840px;
    display: flex;
    flex-direction: column;
    gap: 38px;
}
.cart_product_item {
    display: flex;
    column-gap: 24px;
    align-items: center;
    flex-direction: row;
}

.cart-product-item {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-direction: row;
}

.image_cart_product {
    width: 90px;
    height: 90px;
    padding: 12px;
    background-color: #d3ded4;
    border-radius: 18px;
}
.cart_product_item_name {
    color: #4a5743;
    font-size: 20px;
    font-weight: 600;
}
.cart_product_item_price {
    color: #4a5743;
    font-size: 22px;
    font-weight: 500;
    margin-top: 5px;
}
.changing_quantity {
    padding: 12px 24px;
    background-color: #d3ded4;
    border-radius: 8px;
    width: 130px;
    height: 35px;
}
.content_cart {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin-top: 96px;
    align-items: flex-start;
}
.content_cart_final_price {
    padding: 38px;
    background-color: #d3ded4;
    border-radius: 18px;
    width: 500px;
}
.final_price_title {
    font-size: 36px;
    font-weight: 600;
    color: #4a5743;
}
.cart_final_price_product {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    margin-top: 38px;
}
.cart_final_price_product p {
    font-size: 22px;
    font-weight: 500;
    color: #2a2a2f;
}
.cart_final_price_delivery {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    margin-top: 24px;
}
.cart_final_price_delivery p {
    font-size: 22px;
    font-weight: 500;
    color: #2a2a2f;
}
.delivery_price_counter p {
    font-size: 18px;
    color: #828284;
    font-weight: 500;
    margin-top: 6px;
}
.total_price_cart {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    margin-top: 38px;
    margin-bottom: 24px;
}
/* ... */

